#13577 closed bug (fixed)
Locale prefs can crash the app_server
Reported by: | humdinger | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #13028, #13788 | |
Platform: | All |
Description
This is hrev50205.
Double-clicking a country in the left list, moves it over to the right (preferred language). And vice-versa.
Owenca hit an app_server crash when doing that. I usually use drag&drop instead of double-clicking, but could reproduced after adding/removing "German" a couple of times using double-clicking. Full report attached.
Frame memory: [0x729eb564] .... b0 8d ab 19 0x729eb670 0x2298a35 HWInterface::_AdoptDragBitmap(ServerBitmap*, BPoint&) + 0x2d5 0x729eb6a0 0x229717f HWInterface::SetDragBitmap(ServerBitmap*, BPoint&) + 0x37 0x729eb6e0 0x2210f3e EventDispatcher::SetDragMessage(BMessage&, ServerBitmap*, BPoint&) + 0xb6 0x729eba10 0x223957a ServerWindow::_DispatchViewMessage(int32, BPrivate::LinkReceiver&) + 0x33d2 0x729ebb40 0x22360b0 ServerWindow::_DispatchMessage(int32, BPrivate::LinkReceiver&) + 0x12b4 0x729ebbc0 0x224121e ServerWindow::_MessageLooper() + 0x27a 0x729ebbf0 0x221569e MessageLooper::_message_thread(void*) + 0x26 0x729ebc18 0x146e4a1 thread_entry + 0x21 00000000 0x62526250 commpage_thread_exit + 0
Component Locale prefs or app_server?
Attachments (1)
Change History (9)
by , 8 years ago
Attachment: | app_server-673-debug-01-07-2017-07-29-06.report added |
---|
comment:1 by , 8 years ago
Does it crash when moving from left to right, or from right to left? The code for each direction is different so this may matter.
comment:2 by , 8 years ago
From left to right via double-click. Maybe I also accidentally drag the item while double-clicking?
comment:4 by , 7 years ago
ya this happens every time I select a language in locale preferences by double clicking(in the left list)... after two three double clicks or like that....but happens every time.
comment:5 by , 7 years ago
Blocking: | 13788 added |
---|
comment:7 by , 6 years ago
Blocking: | 13028 added |
---|
comment:8 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
app_server crash